# cli-ltr

./: Cargo.toml  README.md  resources
import/: invalid.txt  t1.txt
locales/: screens.yml
src/: .terminal.rs.swp  app.rs  main.rs  screens.rs  service.rs  terminal.rs  ui.rs
src/models/: test.rs
src/screens/: .home.rs.swp  help.rs  home.rs  rerun.rs  results.rs  runner.rs  test.rs
src/service/: configservice.rs  dbservice.rs  ioservice.rs  testservice.rs
src/ui/: layout.rs  menu.rs  navbar.rs
