[package]
name = "cli-ltr"
version = "0.1.0"
edition = "2024"

[dependencies]
tui = "0.19"
crossterm = "0.25"
rust-i18n = "3.1.4"
rusqlite = { version = "0.35.0", features = ["bundled"] }
pretty-sqlite = "0.1.0"
serde = { version = "^1.0", features = ["derive"] }
confy = "0.6.1"
chrono = "0.4.41"

[dev-dependencies]

